--- a/Weather api/index.html
+++ b/Weather api/index.html
@@ -51,8 +51,9 @@
     </div>
     <footer>&copy; Adity Sadhukhan</footer>
 
-    <script src="./weather.js"></script>
-    <script src="./ui.js"></script>
-    <script src="./app.js"></script>
+    
+    <script src="./weather.js" type="text/javascript"></script>
+    <script src="./ui.js" type="text/javascript"></script>
+    <script src="./app.js" type="text/javascript"></script>
   </body>
 </html>
